--- a/package.json
+++ b/package.json
@@ -4,39 +4,94 @@
   "description": "egg-init",
   "private": true,
   "dependencies": {
+    "axios": "^0.15.3",
     "cross-env": "^3.2.4",
     "egg": "^1.0.0-rc.2",
     "egg-mysql": "^2.0.0",
+    "egg-sequelize": "^2.0.1",
     "egg-validate": "^1.0.0",
-    "egg-view-react": "0.0.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "vue-server-renderer": "^2.2.4"
+    "egg-view-ejs": "^1.1.0",
+    "es6-promise": "^4.1.0",
+    "express": "^4.15.2",
+    "moment": "^2.18.1",
+    "mysql": "^2.13.0",
+    "style-loader": "^0.16.0",
+    "url-loader": "^0.5.7",
+    "vue": "^2.2.6",
+    "vue-resource": "^1.2.1",
+    "vue-router": "^2.2.0",
+    "vue-server-renderer": "^2.2.6",
+    "vue-style-loader": "^2.0.0",
+    "vuex": "^2.2.1",
+    "vuex-router-sync": "^4.1.2",
+    "vux": "^2.2.1-rc.1"
   },
   "devDependencies": {
     "autod": "^2.7.1",
+    "autoprefixer": "^6.7.2",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "^1.2.1",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "buble": "^0.15.2",
+    "buble-loader": "^0.4.1",
+    "chalk": "^1.1.3",
+    "connect-history-api-fallback": "^1.3.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^3.2.4",
+    "css-loader": "^0.26.1",
     "egg-bin": "^2.2.3",
     "egg-ci": "^1.3.0",
     "egg-mock": "^3.0.1",
     "eslint": "^3.16.1",
     "eslint-config-egg": "^3.2.0",
+    "eventsource-polyfill": "^0.9.6",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.0",
+    "friendly-errors-webpack-plugin": "^1.1.3",
+    "function-bind": "^1.1.0",
+    "html-webpack-plugin": "^2.28.0",
+    "http-proxy-middleware": "^0.17.3",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.2",
+    "opn": "^4.0.2",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
+    "ora": "^1.1.0",
+    "rimraf": "^2.6.0",
+    "semver": "^5.3.0",
     "supertest": "^3.0.0",
+    "vue-loader": "^11.1.4",
+    "vue-ssr-webpack-plugin": "^2.1.0",
+    "vue-template-compiler": "^2.2.4",
+    "vuex-i18n": "^1.3.3",
+    "vux-loader": "^1.0.56",
+    "webpack": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-dev-server": "^2.4.2",
+    "webpack-hot-middleware": "^2.16.1",
+    "webpack-merge": "^2.6.1",
     "webstorm-disable-index": "^1.1.2"
   },
   "engines": {
     "node": ">=6.0.0"
   },
   "scripts": {
-    "pm2":"pm2 start app.json",
+    "pm2": "pm2 start app.json",
     "start": "cross-env NODE_ENV=production  node index.js ",
-    "dev": "egg-bin dev",
+    "dev2": "egg-bin dev",
     "debug": "egg-bin debug",
     "test": "npm run lint -- --fix && npm run test-local",
     "test-local": "egg-bin test",
     "cov": "egg-bin cov",
     "lint": "eslint .",
     "ci": "npm run lint && npm run cov",
-    "autod": "autod"
+    "autod": "autod",
+    "dev": "webpack-dev-server --config build/webpack.dev.config.js --progress --inline --color",
+    "client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
   },
   "ci": {
     "version": "6"
