--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "cookies-js": "^1.2.3",
     "cross-env": "^3.2.4",
     "crypto-js": "^3.1.9-1",
-    "egg": "^1.0.0-rc.2",
+    "egg": "^1.3.0",
     "egg-mysql": "^2.0.0",
     "egg-sequelize": "^2.0.1",
     "egg-validate": "^1.0.0",
